# opencv-demo

./: CMakeLists.txt  app.cpp  app.h  main.cpp
vision/: camera.h
